# OpenClHelloWorld

./: CMakeLists.txt  CMakeSettings.json
OpenClHelloWorld/: CMakeLists.txt  OpenClHelloWorld.cpp  OpenClHelloWorld.h  main.cpp  test.cpp
